--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>. -->
+    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
+    Made by Nicolas DINQUEL - December 2015
+-->
 
 <html>
     <head>
